Fix load macro list / clean up